demo-schema/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <description>Demo schema for the DocGen v1.91 ChartBucket example. Not part of the package.</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>