demo-schema/main/default/objects/Survey_Response__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>40</length>
    <type>Text</type>
</CustomField>