demo-schema/main/default/objects/Survey_Response__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <label>Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>