demo-schema/main/default/objects/Survey_Response__c/fields/Selected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Selected_Answer__c</fullName>
    <label>Selected Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>